# GlassOS

./: .gitignore  CMakeLists.txt  Makefile  README.md  linker.ld
boot/: boot.asm  linker32.ld  multiboot_loader.asm  stage2.asm
docs/: ARCHITECTURE.md  PHILOSOPHY.md
docs/contracts/: EVENT-SCHEMA-v1.md  EXPAND-v1.md  OBJECT-MODEL-v1.md  POLICY-GRAMMAR-v1.md
kernel/: config.c  config.h  event.c  event.h  idt.c  idt.h  io.h  isr.asm  kernel_entry.asm  keyboard.c  keyboard.h  main.c  memory.c  memory.h  multiboot_entry.asm  object.c  object.h  panic.c  panic.h  policy.c  policy.h  ramfs.c  ramfs.h  serial.c  serial.h  timer.c  timer.h  types.h  user.c  user.h  vga.c  vga.h
policy/: base.policy
tests/: boot_test.py  config_transaction_test.py  embed_policy.py  policy_deny_test.py  truth_transaction_test.py  user_mode_test.py  verify_elf.py
